Comments: fix appearance on tablets

--- a/_sass/2017/components/comments-section.scss
+++ b/_sass/2017/components/comments-section.scss
@@ -8,7 +8,7 @@
   }
 
   // Mobile: full width
-  @media (max-width: 480px) {
+  @media (max-width: 768px) {
     & > .comments {
       flex: 1 0 100%;
       width: 100%;
